# AiService-prototype

./: .gitignore  README.md  batch_state.json  pyproject.toml
app/: batch_job.py  batch_job_continuous.py
app/api/: agent.py  main.py  schemas.py
app/mcp_server/: server.py  tools.py
app/ui/: main.py
